--- a/generalStyle.css
+++ b/generalStyle.css
@@ -309,7 +309,7 @@ button {
 
 /* EDUCATION */
 /* .education {
-    padding-top: 0;
+    padding-bottom: 0;
 } */
 
 
@@ -346,18 +346,35 @@ button {
     margin-right: 12px;
 }
 
+#languages {
+    padding-bottom: 0;
+}
+
+
 /* FOOTER */
 footer {
     margin: 20px;
+    margin-top: 0;
     text-align: right;
 }
 
-
 .footer {
     padding: 0;
-    /* margin-top: -100px; */
     text-align: center;
 }
+
+
+.img-footer{
+    height: 400px;
+    display: flex;
+    justify-content: center;
+}
+
+.img-footer img{
+    height: 100%;
+    opacity: 0.1;
+}
+
 
 form {
     display: flex;
