--- a/generalStyle.css
+++ b/generalStyle.css
@@ -39,7 +39,6 @@ section {
     border-radius: 20px;
 
     transition: transform 0.5s, box-shadow 0.5s;
-
 }
 
 .card:hover {
@@ -370,6 +369,7 @@ footer {
 }
 
 
+/* Imagen de footer */
 .img-footer{
     height: 400px;
     display: flex;
@@ -379,30 +379,21 @@ footer {
 .img-footer img{
     height: 100%;
     opacity: 0.1;
+
+    transition: opacity 0.7s, transform 0.7s;
+}
+
+.img-footer img:hover{
+    opacity: 100;
+    transform: scale(1.01);
 }
 
 
-form {
-    display: flex;
-    flex-direction: column;
-    padding: 0 50px;
-}
 
-.campo {
-    margin: 0 0 10px 0;
-}
-
-.footer-txt {
+/* .footer-txt {
     margin-top: 30px;
 }
 
 .footer h2 {
-    /* font-size: 70px; */
     text-transform: uppercase;
-    /* color: #1b293a; */
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-}
+} */
