--- a/generalStyle.css
+++ b/generalStyle.css
@@ -383,20 +383,19 @@ footer {
     height: 400px;
     display: flex;
     justify-content: center;
-
     margin-top: 50px;
 }
 
 .img-footer img{
     height: 100%;
     opacity: 0.1;
-
-    transition: opacity 0.7s, transform 0.7s;
+    transition: opacity 0.7s, transform 0.7s, filter 0.7s;
 }
 
 .img-footer img:hover{
     opacity: 100;
     transform: scale(1.01);
+    filter: drop-shadow(0px 0px 20px #00000048);
 }
 
 
