--- a/generalStyle.css
+++ b/generalStyle.css
@@ -384,17 +384,18 @@ footer {
     display: flex;
     justify-content: center;
     margin-top: 50px;
+    margin-bottom: 100px;
 }
 
 .img-footer img{
     height: 100%;
-    opacity: 0.1;
+    opacity: 0.3;
     transition: opacity 0.7s, transform 0.7s, filter 0.7s;
 }
 
 .img-footer img:hover{
     opacity: 100;
-    transform: scale(1.01);
+    transform: scale(1.02);
     filter: drop-shadow(0px 0px 20px #00000048);
 }
 
